@@ -1,6 +1,7 @@
 2.14 - ?
 	- Removed expand/collapse from history browser and /u+/posts and switched to
 	  a combined view
+	- Added a "general discussions" board
 	- API: Allow extra whitespace after "get .." command
 	- API: Allow non-numbers as "clientver" for the login command
 	- API: Added "image_nsfw" member to "get vn"
